--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@solana/spl-token": "^0.1.8",
     "@solana/web3.js": "^1.29.0",
     "@types/node": "^16.9.4",
     "ts-node": "^10.2.1",
