--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "@solana/spl-token": "^0.1.8",
     "@solana/web3.js": "^1.29.0",
+    "@types/bs58": "^4.0.1",
     "@types/node": "^16.9.4",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
