--- a/package.json
+++ b/package.json
@@ -1,10 +1,19 @@
 {
-  "devDependencies": {
-    "@solana/spl-token": "^0.1.8",
-    "@solana/web3.js": "^1.29.0",
-    "@types/bs58": "^4.0.1",
-    "@types/node": "^16.9.4",
-    "ts-node": "^10.2.1",
-    "typescript": "^4.4.3"
-  }
+    "scripts": {
+        "1-1": "ts-node examples/1-basic/1-balance.ts",
+        "1-2": "ts-node examples/1-basic/2-airdrop.ts",
+        "4-1": "ts-node examples/4-metaplex/1-fetch-nft.ts"
+    },
+    "devDependencies": {
+        "@metaplex/js": "^3.1.0",
+        "@solana/spl-token": "^0.1.8",
+        "@solana/spl-token-registry": "^0.2.286",
+        "@solana/web3.js": "^1.30.2",
+        "@types/bs58": "^4.0.1",
+        "@types/dotenv": "^8.2.0",
+        "@types/node": "^16.11.6",
+        "dotenv": "^10.0.0",
+        "ts-node": "^10.4.0",
+        "typescript": "^4.4.4"
+    }
 }
