--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
         "airdrop": "ts-node 1-basic/1-airdrop.ts",
         "1-1": "ts-node 1-basic/1-airdrop.ts",
         "1-2": "ts-node 1-basic/2-balance.ts",
+        "1-3": "ts-node 1-basic/2-send-sol.ts",
+        "2-1": "ts-node 2-spl-tokens/1-list-tokens.ts",
+        "3-1": "ts-node 3-nft-tokens/1-create-nft.ts",
         "4-1": "ts-node 4-metaplex/1-fetch-nft.ts"
     },
     "devDependencies": {
