--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "license": "ISC",
     "scripts": {
         "airdrop": "ts-node 1-basic/1-airdrop.ts",
         "1-1": "ts-node 1-basic/1-airdrop.ts",
