--- a/package.json
+++ b/package.json
@@ -6,18 +6,17 @@
         "1-2": "ts-node 1-basic/2-balance.ts",
         "1-3": "ts-node 1-basic/2-send-sol.ts",
         "2-1": "ts-node 2-spl-tokens/1-list-tokens.ts",
-        "3-1": "ts-node 3-nft-tokens/1-create-nft.ts",
-        "3-2": "ts-node 3-nft-tokens/2-list-nft-tokens.ts",
-        "4-1": "ts-node 4-metaplex/1-fetch-nft.ts"
+        "3-1": "ts-node 3-nft-tokens/1-mint-nft.ts",
+        "3-2": "ts-node 3-nft-tokens/2-list-nfts.ts",
     },
     "devDependencies": {
-        "@metaplex/js": "^3.2.0",
+        "@metaplex/js": "^4.0.0",
         "@solana/spl-token": "^0.1.8",
-        "@solana/spl-token-registry": "^0.2.286",
+        "@solana/spl-token-registry": "^0.2.287",
         "@solana/web3.js": "^1.30.2",
         "@types/bs58": "^4.0.1",
         "@types/dotenv": "^8.2.0",
-        "@types/node": "^16.11.6",
+        "@types/node": "^16.11.7",
         "dotenv": "^10.0.0",
         "ts-node": "^10.4.0",
         "typescript": "^4.4.4"
