--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "license": "ISC",
     "scripts": {
         "airdrop": "ts-node 1-basic/1-airdrop.ts",
+        "balance": "ts-node 1-basic/2-balance.ts",
         "1-1": "ts-node 1-basic/1-airdrop.ts",
         "1-2": "ts-node 1-basic/2-balance.ts",
         "1-3": "ts-node 1-basic/2-send-sol.ts",
